@@ -137,7 +137,7 @@ gretl_vcv_matrix_from_model (MODEL *pmod, const char *select);
 gretl_vector *
 gretl_coeff_vector_from_model (const MODEL *pmod, const char *select);
 
-void gretl_matrix_print (gretl_matrix *m, const char *msg, PRN *prn);
+void gretl_matrix_print (const gretl_matrix *m, const char *msg, PRN *prn);
 
 void gretl_matrix_set_int (gretl_matrix *m, int t);
 
